LNbank: API for accessing, updating and deleting wallets
